# Sunrise

./: README.md
eclipse/Client/: .classpath  options.txt  usercache.json
eclipse/Client/crash-reports/: crash-2021-09-25_19.53.02-client.txt  crash-2021-09-25_19.54.56-client.txt  crash-2021-09-25_19.56.31-client.txt  crash-2021-09-25_19.57.20-client.txt  crash-2021-09-25_20.07.53-client.txt  crash-2021-09-26_10.29.51-client.txt  crash-2021-09-26_15.14.20-client.txt  crash-2021-09-27_13.45.00-client.txt  crash-2021-09-27_14.12.18-client.txt  crash-2021-09-27_14.14.52-client.txt  crash-2021-09-27_14.16.26-client.txt  crash-2021-09-27_14.26.45-client.txt  crash-2021-09-27_15.06.43-client.txt  crash-2021-09-27_16.40.02-client.txt  crash-2021-09-27_16.54.56-client.txt  crash-2021-09-28_07.49.51-client.txt  crash-2021-09-28_09.32.09-client.txt  crash-2021-09-28_10.39.57-client.txt  crash-2021-09-28_14.00.16-client.txt  crash-2021-09-29_10.21.40-client.txt  crash-2021-09-29_11.45.50-client.txt  crash-2021-09-30_10.15.09-client.txt  crash-2021-09-30_16.36.59-client.txt  crash-2021-09-30_16.59.47-client.txt  crash-2021-10-01_14.38.46-client.txt  crash-2021-10-01_16.26.54-client.txt  crash-2021-10-04_19.25.13-client.txt  crash-2021-10-04_19.27.38-client.txt  crash-2021-10-04_19.29.03-client.txt  crash-2021-10-04_19.32.31-client.txt  crash-2021-10-05_13.45.15-client.txt  (+40 more)
ide_config/: Project_Default.xml
nativesrc/: CMakeLists.txt  com_daytrip_shared_math_SunriseMath.cpp  com_daytrip_shared_math_SunriseMath.h
runtime/: commands.py  updatenames.py
temp/: client.md5
(+786 files in other folders)
